These are things that should make the other things work a little bit better.

--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -195,7 +195,7 @@
     	      <label for="new_emails">
     	            Enter
     	     </label> 
-    	     new subscribers (one address + fields per line) in the following <strong>CSV format</strong>: </p> 
+    	     new subscribers (one member address and Profile Fields, Profile Password per line) in the following <strong>CSV format</strong>: </p> 
      
     	     <p><code>Email Address<!-- tmpl_loop fields -->, <!-- tmpl_var name --><!-- /tmpl_loop --><!-- tmpl_if expr="(type eq 'list')" -->, Profile Password<!-- /tmpl_if --></code></p>
         <!-- tmpl_else --> 
