--- a/dada/templates/advanced_list_search_form.tmpl
+++ b/dada/templates/advanced_list_search_form.tmpl
@@ -4,7 +4,11 @@
         <form id="advanced_list_search_form">
             <fieldset> 
                 <legend>Advanced Search <a href="#" class="close_advanced_search_list">[x]</a></legend>
-        
+                <div class="clearskiesbox"> 
+                    <p>(Results are listed below)</p>
+        	    </div> 
+        	
+            	
         <table align="center">
             <tr>
                 <td>
@@ -14,7 +18,6 @@
                     <input type="reset"  value="Clear" class="clear_advanced_search_list">
                     </div>  
                     <div class="floatclear"></div> 
-                	<p class="alert">(Results are listed below)</p>
                 </td>
                 </tr>
             </table> 
