--- a/dada/templates/subscription_form_widget.tmpl
+++ b/dada/templates/subscription_form_widget.tmpl
@@ -76,7 +76,7 @@ Email&nbsp;Address:
 
 	        <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" class="subscriber_field" value="<!-- tmpl_var given_value escape=HTML -->"  />
 	        <!-- tmpl_if required --> 
-	            <span class="error">* Requiredd</span>
+	            <span class="error">* Required</span>
 	        <!-- /tmpl_if --> 
 	        </p>
 	    <!-- /tmpl_loop --> 
