--- a/dada/templates/add_email_screen.tmpl
+++ b/dada/templates/add_email_screen.tmpl
@@ -151,7 +151,11 @@
                      <td>
                       <p>
                        <strong>
-                        <!-- tmpl_var name --> 
+                        <!-- tmpl_if label --> 
+                            <!-- tmpl_var label escape="HTML" -->
+                        <!-- tmpl_else --> 
+                            <!-- tmpl_var name --> 
+                       <!-- /tmpl_if --> 
                        </strong>
                       </p>
                      </td> 
@@ -268,7 +272,11 @@
               <td>
                <p>
                 <strong>
-                 <!-- tmpl_var name --> 
+                     <!-- tmpl_if label --> 
+                         <!-- tmpl_var label escape="HTML" -->
+                     <!-- tmpl_else --> 
+                         <!-- tmpl_var name --> 
+                    <!-- /tmpl_if --> 
                 </strong>
                </p>
               </td> 
@@ -380,7 +388,12 @@
                       <td>
                        <p>
                         <strong>
-                         <!-- tmpl_var name --> 
+                             <!-- tmpl_if label --> 
+                                 <!-- tmpl_var label escape="HTML" -->
+                             <!-- tmpl_else --> 
+                                 <!-- tmpl_var name --> 
+                            <!-- /tmpl_if --> 
+                          
                         </strong>
                        </p>
                       </td> 
@@ -497,7 +510,12 @@
           <td>
            <p>
             <strong>
-             <!-- tmpl_var name --> 
+                 <!-- tmpl_if label --> 
+                     <!-- tmpl_var label escape="HTML" -->
+                 <!-- tmpl_else --> 
+                     <!-- tmpl_var name --> 
+                <!-- /tmpl_if --> 
+              
             </strong>
            </p>
           </td> 
@@ -609,7 +627,12 @@
               <td>
                <p>
                 <strong>
-                 <!-- tmpl_var name --> 
+                     <!-- tmpl_if label --> 
+                         <!-- tmpl_var label escape="HTML" -->
+                     <!-- tmpl_else --> 
+                         <!-- tmpl_var name --> 
+                    <!-- /tmpl_if --> 
+                  
                 </strong>
                </p>
               </td> 
@@ -715,7 +738,12 @@
           <td>
            <p>
             <strong>
-             <!-- tmpl_var name --> 
+                 <!-- tmpl_if label --> 
+                     <!-- tmpl_var label escape="HTML" -->
+                 <!-- tmpl_else --> 
+                     <!-- tmpl_var name --> 
+                <!-- /tmpl_if --> 
+              
             </strong>
            </p>
           </td> 
