--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -41,10 +41,14 @@
 <!-- tmpl_if load_datetimepicker --> 
     <link rel="stylesheet" type="text/css" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery.datetimepicker.css"/ >
     <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.datetimepicker.js"></script>
-    
     <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/unserialize.jquery.1.0.2.js"></script>
     
-    
+<!-- /tmpl_if -->
+
+
+<!-- tmpl_if load_linedtextarea --> 
+    <link rel="stylesheet" type="text/css" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery-linedtextarea.css"/ >
+    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-linedtextarea.js"></script>    
 <!-- /tmpl_if -->
 
 
