--- a/dada/templates/add_email_screen.tmpl
+++ b/dada/templates/add_email_screen.tmpl
@@ -216,14 +216,12 @@
          </fieldset>
          </div> 
  <!--/tmpl_if-->
-
-
-
-
-
-
-
- <!-- tmpl_if subscribed -->
+ 
+ 
+ 
+ <!-- Subscribed Already --> 
+ 
+  <!-- tmpl_if subscribed -->
 
      <div id="subscribed_addresses"> 
          <fieldset> 
