--- a/dada/templates/field_comparisons_widget.tmpl
+++ b/dada/templates/field_comparisons_widget.tmpl
@@ -44,6 +44,7 @@
              <label for="subscriber_timestamp_rangestart">Between:</label>
              <br> 
              <input id="subscriber_timestamp_rangestart" name="subscriber.timestamp.rangestart" type="text" >
+             <br />(<a href="#" class="clear_field" data-target="subscriber_timestamp_rangestart">clear</a>)
         </p>
     </td>
     <td>
@@ -53,6 +54,7 @@
             </label>
             <br/>
             <input id="subscriber_timestamp_rangeend" name="subscriber.timestamp.rangeend" type="text" >
+            <br />(<a href="#" class="clear_field" data-target="subscriber_timestamp_rangeend">clear</a>)
          </p> 
      </td>
     </tr>
