--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -21,6 +21,8 @@
 <!-- tmpl_if comment --><script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script><!-- /tmpl_if --> 
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-1.8.2.min.js"></script>
 
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.plainoverlay.min.js"></script>
+
 <!-- tmpl_if comment --><script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script><!-- /tmpl_if -->
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-ui-1.9.1.custom.min.js"></script>
 
