--- a/dada/templates/list_search_form_widget.tmpl
+++ b/dada/templates/list_search_form_widget.tmpl
@@ -5,7 +5,7 @@
           <input type="hidden" name="f"    value="view_list" />
           <input type="hidden" name="type" value="<!-- tmpl_var type default="list" -->" />
           <input type="button" class="small_button search_list" value="Search <!-- tmpl_var type_title escape="HTML" -->" />
-          <a href="#" class="advanced_search_list">(advanced search)</a>
+          <input type="button" class="small_button show_advanced_search_list" value="Advanced..." />
           <p>
     	  <!-- tmpl_if query --> 
     		<input type="button" class="small_button clear_search" value="Clear" />
