--- a/dada/templates/view_list_screen.tmpl
+++ b/dada/templates/view_list_screen.tmpl
@@ -15,33 +15,27 @@
 </div>
 	
 <form>
-	<input type="hidden" id="s_program_url"   name="s_program_url"   value="<!-- tmpl_var S_PROGRAM_URL -->" /> 
-	<input type="hidden" id="type"            name="type"            value="<!-- tmpl_var type escape="HTML" -->" />	
-	<input type="hidden" id="page"            name="page"            value="<!-- tmpl_var page escape="HTML"  -->" />	
-	<input type="hidden" id="query"           name="query"           value="<!-- tmpl_var query escape="HTML"  -->" />
-	<input type="hidden" id="advanced_search" name="advanced_search" value="<!-- tmpl_var advanced_search escape="HTML" -->" />
-	<input type="hidden" id="advanced_query"  name="advanced_query"  value="<!-- tmpl_var advanced_query escape="HTML"  -->" />
-  	<input type="hidden" id="order_by"        name="order_by"        value="<!-- tmpl_var order_by escape="HTML"  -->" />	      
-  	<input type="hidden" id="order_dir"       name="order_dir"       value="<!-- tmpl_var order_dir escape="HTML"  -->" />	      
+    <input type="hidden" id="s_program_url"     name="s_program_url"   value="<!-- tmpl_var S_PROGRAM_URL -->" /> 
+    <input type="hidden" id="support_files_url" name="support_files_url"   value="<!-- tmpl_var SUPPORT_FILES_URL -->" /> 
+    <input type="hidden" id="type"              name="type"            value="<!-- tmpl_var type escape="HTML" -->" />	
+    <input type="hidden" id="page"              name="page"            value="<!-- tmpl_var page escape="HTML"  -->" />	
+    <input type="hidden" id="query"             name="query"           value="<!-- tmpl_var query escape="HTML"  -->" />
+    <input type="hidden" id="advanced_search"   name="advanced_search" value="<!-- tmpl_var advanced_search escape="HTML" -->" />
+    <input type="hidden" id="advanced_query"    name="advanced_query"  value="<!-- tmpl_var advanced_query escape="HTML"  -->" />
+    <input type="hidden" id="order_by"          name="order_by"        value="<!-- tmpl_var order_by escape="HTML"  -->" />	      
+    <input type="hidden" id="order_dir"         name="order_dir"       value="<!-- tmpl_var order_dir escape="HTML"  -->" />	      
 </form>
 
 <!-- tmpl_include view_list_modalmenu_widget.tmpl -->
 
-<div id="view_list_viewport_loading"></div>
+<div id="view_list_viewport" style="min-height:425px"></div> 
 
-
-
-    <div id="view_list_viewport" style="height:425px"></div> 
-
-<!-- tmpl_if advanced_search --> 
-<!-- tmpl_else -->
-    <div id="domain_break_down">
-        <h1>Breakdown by Domain</h1>
-        <p>Selecting a domain will run a search, on the table above.</p> 
-        <div id="domain_break_down_chart_loading"></div>
-        <div id="domain_break_down_chart" data-width="720" data-height="400"></div> 
-    </div>
-<!-- /tmpl_if --> 
+<div id="domain_break_down">
+    <h1>Breakdown by Domain</h1>
+    <p>Selecting a domain will run a search, on the table above.</p> 
+    <div id="domain_break_down_chart_loading"></div>
+    <div id="domain_break_down_chart" data-width="720" data-height="400"></div> 
+</div>
 
 </fieldset> 
 
